[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "playlist-vibecheck"
version = "0.1.0"
description = "Key (tonality) and vibe-match analysis for public Spotify playlists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.scripts]
vibecheck = "vibecheck.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/vibecheck"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
